[package]
authors = ["KirmesBude <kirmesbude@gmail.com>"]
name = "bevy_titan"
version = "0.6.0"
edition = "2021"
description = "Bevy plugin for spritesheet manifest loading"
repository = "https://github.com/KirmesBude/bevy_titan"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "bevy", "spritesheet", "textureatlas", "assets"]
categories = ["game-development"]
readme = "README.md"
exclude = ["/assets"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", default-features = false, features=["bevy_asset", "bevy_render", "bevy_sprite"]}
serde = { version = "1", features = ["derive"] }
ron = "0.8"
thiserror = "1"
rectangle-pack = "0.4"

[dev-dependencies]
bevy = { version = "0.12", features = ["file_watcher"] }
bevy_asset_loader = "0.18"

[[example]]
name = "homogeneous_sprite_sheet"
path = "examples/homogeneous_sprite_sheet.rs"

[[example]]
name = "bevy_asset_loader"
path = "examples/bevy_asset_loader.rs"
