[package]
authors = ["KirmesBude <kirmesbude@gmail.com>"]
name = "bevy_titan"
version = "0.8.1"
edition = "2021"
description = "Bevy plugin for spritesheet manifest loading"
repository = "https://github.com/KirmesBude/bevy_titan"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "bevy", "spritesheet", "textureatlas", "assets"]
categories = ["game-development"]
readme = "README.md"
exclude = ["/assets"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14", default-features = false, features=["bevy_asset", "bevy_render", "bevy_sprite"]}
serde = { version = "1", features = ["derive"] }
thiserror = "1"
ron = "0.8"
# Sub dependencies of bevy; keep version in sync
glam = { version = "0.27", default-features = false, features=["serde"]}
wgpu-types = { version = "0.20", default-features = false, features=["serde"]}

[dev-dependencies]
bevy = { version = "0.14", features = ["file_watcher"] }
bevy_asset_loader = { version = "0.21" }

[[example]]
name = "homogeneous_sprite_sheet"
path = "examples/homogeneous_sprite_sheet.rs"

[[example]]
name = "heterogeneous_sprite_sheet"
path = "examples/heterogeneous_sprite_sheet.rs"

[[example]]
name = "composite_texture_atlas"
path = "examples/composite_texture_atlas.rs"

[[example]]
name = "bevy_asset_loader"
path = "examples/bevy_asset_loader.rs"

[[example]]
name = "titan_configuration"
path = "examples/titan_configuration.rs"